--- a/package.json
+++ b/package.json
@@ -23,24 +23,25 @@
 		"@radix-ui/react-tabs": "^1.1.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"lucide-react": "^0.468.0",
+		"lucide-react": "^0.479.0",
 		"next": "15.1.0",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.0",
 		"sonner": "^1.7.1",
-		"tailwind-merge": "^2.5.5",
+		"tailwind-merge": "^3.0.2",
 		"tailwindcss-animate": "^1.0.7",
 		"vaul": "^1.1.1",
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
-		"typescript": "^5",
+		"@tailwindcss/postcss": "^4.0.12",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"postcss": "^8",
-		"tailwindcss": "^3.4.1"
+		"tailwindcss": "^4.0.12",
+		"typescript": "^5"
 	}
 }
