--- a/package.json
+++ b/package.json
@@ -14,26 +14,27 @@
 	},
 	"dependencies": {
 		"@biomejs/biome": "^1.9.4",
-		"@hookform/resolvers": "^3.9.1",
-		"@radix-ui/react-dialog": "^1.1.2",
-		"@radix-ui/react-dropdown-menu": "^2.1.2",
-		"@radix-ui/react-label": "^2.1.0",
-		"@radix-ui/react-separator": "^1.1.0",
-		"@radix-ui/react-slot": "^1.1.0",
-		"@radix-ui/react-tabs": "^1.1.1",
+		"@hookform/resolvers": "^4.1.3",
+		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-dropdown-menu": "^2.1.6",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-select": "^2.1.6",
+		"@radix-ui/react-separator": "^1.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-tabs": "^1.1.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.479.0",
 		"next": "15.1.0",
-		"next-themes": "^0.4.4",
+		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-hook-form": "^7.54.0",
-		"sonner": "^1.7.1",
+		"react-hook-form": "^7.54.2",
+		"sonner": "^2.0.1",
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss-animate": "^1.0.7",
-		"vaul": "^1.1.1",
-		"zod": "^3.24.1"
+		"vaul": "^1.1.2",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4.0.12",
